1. Fixed the issue of iOS16 iOS17.0 failure to save 2. Fixed the issue of incorrect version number display Thanks for xiaoBovlog (@xiaobovlog) help.

--- a/MoveFileHelper/Makefile
+++ b/MoveFileHelper/Makefile
@@ -2,7 +2,7 @@ TARGET := iphone:clang:latest:7.0
 
 include $(THEOS)/makefiles/common.mk
 
-TOOL_NAME = FileAttributesHelper
+TOOL_NAME = MoveFileHelper
 
 $(TOOL_NAME)_FILES = main.m
 $(TOOL_NAME)_CFLAGS = -fobjc-arc
@@ -15,3 +15,4 @@ after-stage::
 	@echo "Copying file to parent directory..."
 	cp $(THEOS_STAGING_DIR)/usr/local/bin/$(TOOL_NAME) ../$(TOOL_NAME)/
 	@echo "Copy completed."
+
